--- a/app/src/main/res/layout-xlarge/activity_hostel__registeration.xml
+++ b/app/src/main/res/layout-xlarge/activity_hostel__registeration.xml
@@ -96,7 +96,6 @@
                     android:focusableInTouchMode="true"
                     android:text="Name *"
                     android:textSize="15dp" />
-
                 <EditText
                     android:id="@+id/editTextusername"
                     android:layout_width="match_parent"
@@ -126,7 +125,6 @@
                     android:layout_marginTop="20dp"
                     android:text="Mobile number1 *"
                     android:textSize="15dp" />
-
                 <EditText
                     android:id="@+id/editTextmobile1"
                     android:layout_width="match_parent"
@@ -146,7 +144,6 @@
                     android:paddingTop="5dp"
                     android:text="9764200290"
                     android:textColor="#bcbcbc" />
-
                 <TextView
                     android:id="@+id/txtmobilenumber2"
                     android:layout_width="wrap_content"
@@ -156,7 +153,6 @@
                     android:layout_marginTop="20dp"
                     android:text="Mobile number2 "
                     android:textSize="15dp" />
-
                 <EditText
                     android:id="@+id/editTextmobile2"
                     android:layout_width="match_parent"
@@ -219,7 +215,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="20dp">
-
                 <TextView
                     android:id="@+id/txthosteldetails"
                     android:layout_width="wrap_content"
@@ -229,7 +224,6 @@
                     android:text="Hostel Details"
                     android:textColor="@color/black"
                     android:textSize="20dp" />
-
                 <TextView
                     android:id="@+id/txthostelname"
                     android:layout_width="wrap_content"
@@ -239,7 +233,6 @@
                     android:layout_marginStart="5dp"
                     android:text="Hostel name *"
                     android:textSize="15dp" />
-
                 <EditText
                     android:id="@+id/editTexthostelname"
                     android:layout_width="match_parent"
@@ -256,7 +249,6 @@
                     android:paddingLeft="5dp"
                     android:paddingTop="5dp"
                     android:textColor="#bcbcbc" />
-
                 <TextView
                     android:id="@+id/txtaddress"
                     android:layout_width="wrap_content"
@@ -267,7 +259,6 @@
                     android:layout_marginTop="10dp"
                     android:text="Address *"
                     android:textSize="15dp" />
-
                 <EditText
                     android:id="@+id/editTextaddress"
                     android:layout_width="match_parent"
@@ -280,10 +271,13 @@
                     android:editable="false"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:inputType="text"
+                    android:inputType="none"
+                    android:lines="3"
+                    android:maxLines="3"
                     android:paddingBottom="5dp"
                     android:paddingLeft="5dp"
                     android:paddingTop="5dp"
+                    android:singleLine="false"
                     android:textColor="#bcbcbc" />
                 />
 
@@ -325,7 +319,6 @@
                     android:layout_below="@+id/editTextcity"
                     android:layout_marginTop="13dp"
                     android:text="Price *" />
-
                 <EditText
                     android:id="@+id/editTextprice"
                     android:layout_width="match_parent"
@@ -343,7 +336,6 @@
                     android:paddingLeft="5dp"
                     android:paddingTop="5dp"
                     android:textColor="#bcbcbc" />
-
                 <TextView
                     android:id="@+id/textvacancy"
                     android:layout_width="wrap_content"
@@ -353,7 +345,6 @@
                     android:layout_below="@+id/editTextprice"
                     android:layout_marginTop="15dp"
                     android:text="Vacancy *" />
-
                 <EditText
                     android:id="@+id/editTextvacancy"
                     android:layout_width="match_parent"
@@ -373,6 +364,7 @@
                     android:textColor="#bcbcbc" />
 
 
+
                 <TextView
                     android:id="@+id/txttype"
                     android:layout_width="wrap_content"
@@ -382,7 +374,6 @@
                     android:layout_marginTop="15dp"
                     android:text="Type *"
                     android:textSize="15dp" />
-
                 <Spinner
                     android:id="@+id/spinner"
                     android:layout_width="match_parent"
@@ -391,6 +382,7 @@
                     android:layout_marginLeft="135dp"
                     android:layout_marginRight="15dp"
                     android:layout_marginTop="15dp"
+                    android:background="@drawable/style"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:nextFocusDown="@+id/radioGroup"
@@ -402,37 +394,26 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/txttype"
                     android:layout_centerInParent="true"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginStart="5dp"
-                    android:layout_marginTop="18dp"
+                    android:layout_marginTop="25dp"
                     android:foregroundGravity="center"
                     android:gravity="center"
                     android:text="Fetch Address "
                     android:textSize="15dp" />
 
-                <TextView
-                    android:id="@+id/txtlocation"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/spinner"
-                    android:layout_marginLeft="135dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginTop="15dp"
-                    android:textColor="@color/black"
-                    android:textSize="15dp"
-                    android:visibility="invisible" />
+
 
                 <TextView
                     android:id="@+id/txtgender"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/txtlocation"
+                    android:layout_below="@+id/getAddress"
                     android:layout_marginStart="5dp"
-                    android:layout_marginTop="35dp"
+                    android:layout_marginTop="10dp"
                     android:paddingTop="5dp"
                     android:text="Gender *"
                     android:textSize="15dp" />
-
                 <RadioGroup
                     android:id="@+id/radioGroup"
                     android:layout_width="wrap_content"
@@ -454,7 +435,6 @@
                         android:checked="true"
                         android:inputType="textAutoComplete"
                         android:text="Girls" />
-
                     <RadioButton
                         android:id="@+id/male"
                         android:layout_width="wrap_content"
@@ -462,7 +442,6 @@
                         android:layout_weight="1"
                         android:inputType="textAutoComplete"
                         android:text="Boys" />
-
                     <RadioButton
                         android:id="@+id/coed"
                         android:layout_width="wrap_content"
@@ -498,7 +477,6 @@
             app:cardCornerRadius="5dp"
             app:cardElevation="10dp"
             app:cardPreventCornerOverlap="true">
-
             <RelativeLayout
                 android:id="@+id/togglerelative"
                 android:layout_width="wrap_content"
@@ -507,7 +485,6 @@
                 android:layout_below="@+id/type"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="20dp">
-
                 <TextView
                     android:id="@+id/txthostelfacilities"
                     android:layout_width="wrap_content"
@@ -990,7 +967,6 @@
 
             </RelativeLayout>
         </android.support.v7.widget.CardView>
-
         <Button
             android:id="@+id/button1"
             android:layout_width="match_parent"
