--- a/app/src/main/res/layout/dialogue_enquirenow.xml
+++ b/app/src/main/res/layout/dialogue_enquirenow.xml
@@ -11,6 +11,7 @@
         android:layout_marginTop="15dp"
         android:gravity="center"
         android:text="Owner Name"
+        android:textColor="@color/black"
         android:textSize="30dp" />
 
     <RadioGroup
