--- a/app/src/main/res/layout-small/activity_hostel__registeration.xml
+++ b/app/src/main/res/layout-small/activity_hostel__registeration.xml
@@ -272,7 +272,7 @@
                     android:editable="false"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:inputType="text"
+                    android:inputType="none"
                     android:paddingBottom="5dp"
                     android:paddingLeft="5dp"
                     android:paddingTop="5dp"
