--- a/app/src/main/res/layout/activity_hostel_details.xml
+++ b/app/src/main/res/layout/activity_hostel_details.xml
@@ -801,17 +801,14 @@
 
                     <TextView
                         android:id="@+id/textViewtandc"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_below="@+id/textViewDescription"
-                        android:padding="15dp"
-                        android:paddingTop="10dp"
                         android:text="Terms And Conditions"
                         android:textColor="@android:color/holo_blue_dark"
                         android:textStyle="italic" />
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
-
 
         </RelativeLayout>
 
