--- a/app/src/main/res/layout/dialog_tandc.xml
+++ b/app/src/main/res/layout/dialog_tandc.xml
@@ -4,21 +4,14 @@
     android:layout_height="match_parent">
 
 
-    <!--<android.support.v4.widget.NestedScrollView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="match_parent">-->
-
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:text="@string/tandc"
         android:textColor="@color/grey"
         android:textSize="15dp" />
-
-    <!--</android.support.v4.widget.NestedScrollView>-->
 
 
 </ScrollView>
