updated hostel registration

--- a/app/src/main/res/layout/activity_hostel__registeration.xml
+++ b/app/src/main/res/layout/activity_hostel__registeration.xml
@@ -249,13 +249,26 @@
                     android:paddingLeft="5dp"
                     android:paddingTop="5dp"
                     android:textColor="#bcbcbc" />
+                <Button
+                    android:id="@+id/getAddress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/editTexthostelname"
+                    android:layout_centerInParent="true"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="10dp"
+                    android:foregroundGravity="center"
+                    android:gravity="center"
+                    android:text="click here to Fetch Address "
+                    android:textSize="15dp" />
                 <TextView
                     android:id="@+id/txtaddress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_above="@+id/txtprice"
                     android:layout_alignStart="@+id/txthostelname"
-                    android:layout_below="@+id/editTexthostelname"
+                    android:layout_below="@+id/getAddress"
                     android:layout_marginTop="10dp"
                     android:text="Address *"
                     android:textSize="15dp" />
@@ -263,7 +276,7 @@
                     android:id="@+id/editTextaddress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/editTexthostelname"
+                    android:layout_below="@+id/getAddress"
                     android:layout_marginLeft="135dp"
                     android:layout_marginRight="15dp"
                     android:layout_marginTop="8dp"
@@ -388,28 +401,14 @@
                     android:paddingBottom="5dp"
                     android:paddingTop="5dp" />
 
-                <Button
-                    android:id="@+id/getAddress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/txttype"
-                    android:layout_centerInParent="true"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="25dp"
-                    android:foregroundGravity="center"
-                    android:gravity="center"
-                    android:text="Fetch Address "
-                    android:textSize="15dp" />
-
 
                 <TextView
                     android:id="@+id/txtgender"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/getAddress"
+                    android:layout_below="@+id/spinner"
                     android:layout_marginStart="5dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="15dp"
                     android:paddingTop="5dp"
                     android:text="Gender *"
                     android:textSize="15dp" />
@@ -420,7 +419,6 @@
                     android:layout_alignTop="@+id/txtgender"
                     android:layout_marginLeft="110dp"
                     android:focusable="true"
-
                     android:focusableInTouchMode="true"
                     android:orientation="horizontal"
                     android:weightSum="3">
