--- a/app/src/main/res/layout/activity_hostel__registeration.xml
+++ b/app/src/main/res/layout/activity_hostel__registeration.xml
@@ -258,6 +258,9 @@
                     android:layout_marginBottom="10dp"
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="10dp"
+                    android:background="@color/colorPrimaryDark"
+                    android:textColor="@color/white"
+                    android:padding="5dp"
                     android:foregroundGravity="center"
                     android:gravity="center"
                     android:text="click here to Fetch Address "
