--- a/app/src/main/res/layout-xlarge/activity_hostel__registeration.xml
+++ b/app/src/main/res/layout-xlarge/activity_hostel__registeration.xml
@@ -260,6 +260,9 @@
                     android:layout_marginTop="10dp"
                     android:foregroundGravity="center"
                     android:gravity="center"
+                    android:background="@color/colorPrimaryDark"
+                    android:textColor="@color/white"
+                    android:padding="5dp"
                     android:text="Fetch Address "
                     android:textSize="15dp" />
                 <TextView
