--- a/app/src/main/res/layout/activity_new_menu.xml
+++ b/app/src/main/res/layout/activity_new_menu.xml
@@ -104,8 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-
-            android:src="@drawable/ic_filter_list_black_24dp" />
+            app:srcCompat="@drawable/ic_filter_list_black_24dp" />
     </android.support.design.widget.CoordinatorLayout>
 
     <com.arlib.floatingsearchview.FloatingSearchView
